deduplicate_works: polishing lists style make sure there is no gap between one of those div and the top and that none gets too small because empty

--- a/app/modules/entities/scss/_deduplicate.scss
+++ b/app/modules/entities/scss/_deduplicate.scss
@@ -105,6 +105,10 @@
     @include display-flex(row, baseline, center, wrap);
     margin: 0.5em;
   }
+  .invWorks, .wdWorks{
+    min-width: 15em;
+    align-self: stretch;
+  }
   .wdWorks{ background-color: $grey; }
   .workLi{
     // Tight but letting enough width for inv URIs to fit
